--- a/public/styles.css
+++ b/public/styles.css
@@ -89,6 +89,7 @@ header {
 
 .card {
     background-color: var(--color-rocketseat);
+    display: grid;
 }
 
 .card__image-container img {
@@ -103,6 +104,7 @@ header {
 .card__info {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    align-items: center;
 }
 
 .card__price {
