--- a/public/styles.css
+++ b/public/styles.css
@@ -90,6 +90,7 @@ header {
 .card {
     background-color: var(--color-rocketseat);
     display: grid;
+    cursor: pointer;
 }
 
 .card__image-container img {
@@ -156,4 +157,39 @@ iframe {
     height: 90%;
     position: absolute;
     top: 5%;
+}
+
+/* ====  FEATURED  === */
+.featured-wrapper.card__image-container {
+    position: relative;
+}
+
+
+.featured {
+    position: absolute;
+    background: #f7d05f;
+    color: #111;
+    padding: 2px 8px;
+    right: 5px;
+    border-radius: 16px;
+    top: -10px;
+}
+
+/* === VIDEO PAGE === */
+
+.video {
+    margin: 0 auto;
+    min-height: 800px;
+}
+
+.card__video-container {
+    position: relative;
+    padding-top: 62.5%;
+}
+
+.card__video-container iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
 }
