--- a/public/styles.css
+++ b/public/styles.css
@@ -179,11 +179,16 @@ iframe {
 
 .video {
     margin: 0 auto;
-    min-height: 800px;
+    max-width: 800px;
+}
+
+.video .card {
+    cursor: initial;
 }
 
 .card__video-container {
     position: relative;
+    width: 100%;
     padding-top: 62.5%;
 }
 
