Adicionada página de erro 404

--- a/public/styles.css
+++ b/public/styles.css
@@ -198,3 +198,9 @@ iframe {
     position: absolute;
     top: 0;
 }
+
+/* === ERROR === */
+.erro {
+    text-align: center;
+    margin: 150px auto;
+}
