--- a/views/about.njk
+++ b/views/about.njk
@@ -1,7 +1,8 @@
 {% extends "layout.njk" %}
 
 {% block head %}
-    <title>Sobre - {{about.name}}</title>
+    <title>Sobre -
+        {{about.name}}</title>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +15,7 @@
     </div>
     <div id="links-footer" class="links">
         {% for link in about.links %}
-        <a href="{{ link.url }}" target="_blanck">{{ link.name }}</a>
+            <a href="{{ link.url }}" target="_blanck">{{ link.name }}</a>
         {% endfor %}
     </div>
 
